# learn-opengl-hello-world

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
dependencies/lib/: glad.c
src/: main.cpp
